# esp-det

./: .gitignore  CMakeLists.txt  Makefile  README.md  dep_add.sh  dep_update.sh  gen_aes.sh  install.sh  notes.md
esp_aes/: Makefile  esp_aes.c
esp_cfg/: esp_cfg.c
esp_cfg/include/: esp_cfg.h
esp_cmd/: Makefile  esp_cmd.c
esp_det/: Makefile  esp_det.c
esp_det/include/: esp_det.h
esp_eb/: Makefile  esp_eb.c
esp_eb/include/: esp_eb.h
esp_json/: esp_json.c
esp_pin/: Makefile  esp_gpio_debug.c
esp_tim/include/: esp_tim.h
example/: CMakeLists.txt  main.c  wifi.c
example/include/: user_config.example.h  user_config.h  wifi.h
example/lib/esp_aes/: CMakeLists.txt  README.md
example/lib/esp_aes/esp_aes/include/: esp_aes.h
example/lib/esp_aes/example/lib/esp_pin/: Makefile  README.md
example/lib/esp_cfg/: CMakeLists.txt  Makefile  README.md  dep_update.sh
example/lib/esp_cfg/esp_cfg/: Makefile
example/lib/esp_cfg/example/: main.c
example/lib/esp_cmd/: CMakeLists.txt  Makefile  README.md  dep_add.sh
example/lib/esp_cmd/esp_cmd/include/: esp_cmd.h
example/lib/esp_cmd/example/: main.c
example/lib/esp_cmd/example/lib/esp_pin/: .gitignore
example/lib/esp_cmd/example/lib/esp_pin/esp_pin/: esp_sdo.c
example/lib/esp_cmd/example/lib/esp_pin/example/: main.c
example/lib/esp_eb/: CMakeLists.txt  Makefile  README.md  dep_add.sh
example/lib/esp_eb/example/: main.c
example/lib/esp_eb/example/lib/esp_pin/esp_pin/: esp_gpio.c
example/lib/esp_eb/example/lib/esp_tim/: README.md
example/lib/esp_eb/example/lib/esp_tim/example/: Makefile
example/lib/esp_json/: Makefile
example/lib/esp_json/esp_json/: Makefile
example/lib/esp_json/esp_json/include/: esp_json.h
example/lib/esp_json/example/: main.c
example/lib/esp_pin/: CMakeLists.txt
example/lib/esp_pin/esp_pin/include/: esp_gpio_debug.h  esp_sdo.h
example/lib/esp_tim/: .gitignore  CMakeLists.txt  Makefile  README.md
example/lib/esp_tim/esp_tim/: Makefile  esp_tim.c
example/lib/esp_tim/example/: main.c
example/lib/esp_tim/example/lib/esp_pin/esp_pin/include/: esp_gpio.h
example/lib/esp_tim/example/lib/uart/: uart.c
example/lib/uart/: Makefile
example/lib/uart/include/: uart.h
src/: CMakeLists.txt  Findesp_det.cmake  esp_det.c
src/include/: esp_det.h
